--- a/gutenberg/gutenberg1.html
+++ b/gutenberg/gutenberg1.html
@@ -4365,7 +4365,7 @@ reference was added to the moved footnote to match the format of other endnotes.
 
 <p>There are two instances of Massa Carara (<a href="#Page_43">pp. 43</a> and <a href="#Page_45">45</a>) and one instance of Massa-Carrara (<a href="#Page_ix">page ix</a>). As this latter is in the Introduction, i.e. distinct from the book proper, it has been retained.</p>
 
-<p>The  different spellings of Cunégonde (which occurs only in the Introduction (<a href="#Page_viii">page viii</a>)) and Robeck (which occurs in the Notes [<a href="#Page_170">p. 170</a>]; spelt Robek in the text [<a href="#Page_53">p. 53</a>]) have been retained for the same reason.</p></div>
+<p>The  different spellings of CunÃ©gonde (which occurs only in the Introduction (<a href="#Page_viii">page viii</a>)) and Robeck (which occurs in the Notes [<a href="#Page_170">p. 170</a>]; spelt Robek in the text [<a href="#Page_53">p. 53</a>]) have been retained for the same reason.</p></div>
 
 <hr style='width: 45%;' />
 
